# homelab-projects

./: README.md
ai/: IPL.py  LCEL.py  Langraph_prebuilt.py  README.md  basic.py  custom_langraph.py  get_data.py  hello.py  ollama-lxc-setup.md  pydantic_learn.py  requirements.txt  structure_io.py  structured.py  tool_uses.py  tools.py
ai/Agent_AI/: README.md  agent_v1_raw.py  pyproject.toml  tools.py
ai/data/: Erdweg_weather.csv
docker/: README.md  docker-compose.yml
esphome/: README.md  bathroom-monitor.yaml  epaper.yaml  hall-clock.yaml  kitchen-display.yaml  livingroom-monitor.yaml  mailbox-alert.yaml  office-monitor.yaml  plant-moisture.yaml  touch-voice-assistant.yaml
homelab/: infrastructure.md
pcb/: README.md
