[project]
name = "agent-ai"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "anthropic>=0.102.0",
    "fastapi>=0.136.1",
    "httpx>=0.28.1",
    "langchain-anthropic>=1.4.3",
    "langchain-core>=1.4.0",
    "langgraph>=1.2.0",
    "pydantic>=2.13.4",
    "python-dotenv>=1.2.2",
    "uvicorn>=0.47.0",
]
